--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,15 +2,30 @@
 db {
     default {
         driver = org.postgresql.Driver
-        url = ${DB_URI}
-        username = ${DB_USERNAME}
-        password = ${DB_PASSWORD}
-        port = ${DB_PORT}
-        database = ${DB_DATABASE}
+        url = ${POSTGRESQL_ADDON_URI}
+        username = ${POSTGRESQL_ADDON_USER}
+        password = ${POSTGRESQL_ADDON_PASSWORD}
+        port = ${POSTGRESQL_ADDON_PORT}
+        database = ${POSTGRESQL_ADDON_DB}
         logSql = true
     }
 }
-play.filters.hosts {
-    allowed = ["localhost:9000", "192.168.0.14:9000"]
+
+s3 {
+    host_base=${CELLAR_ADDON_HOST}
+    access_key=${CELLAR_ADDON_KEY_ID}
+    secret_key=${CELLAR_ADDON_KEY_SECRET}
+    bucket_name="resources"
 }
-resource.dir = ${RESOURCE_DIR}
+
+authProvider {
+    url=${AUTH_PROVIDER_URL}
+}
+
+play.filters.hosts {
+    allowed = [".cleverapps.io", "localhost"]
+}
+play.filters.enabled += "play.filters.cors.CORSFilter"
+
+play.http.secret.key="changeme"
+play.http.secret.key=${?APPLICATION_SECRET}
