--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,31 +1,31 @@
 # https://www.playframework.com/documentation/latest/Configuration
 db {
-    default {
-        driver = org.postgresql.Driver
-        url = ${POSTGRESQL_ADDON_URI}
-        username = ${POSTGRESQL_ADDON_USER}
-        password = ${POSTGRESQL_ADDON_PASSWORD}
-        port = ${POSTGRESQL_ADDON_PORT}
-        database = ${POSTGRESQL_ADDON_DB}
-        logSql = true
-    }
+  default {
+    driver = org.postgresql.Driver
+    url = "jdbc:postgresql://"${POSTGRESQL_ADDON_HOST}":"${POSTGRESQL_ADDON_PORT}"/"${POSTGRESQL_ADDON_DB}
+    username = ${POSTGRESQL_ADDON_USER}
+    password = ${POSTGRESQL_ADDON_PASSWORD}
+    port = ${POSTGRESQL_ADDON_PORT}
+    database = ${POSTGRESQL_ADDON_DB}
+    logSql = true
+  }
 }
 
 s3 {
-    host_base=${CELLAR_ADDON_HOST}
-    access_key=${CELLAR_ADDON_KEY_ID}
-    secret_key=${CELLAR_ADDON_KEY_SECRET}
-    bucket_name="resources"
+  host_base = ${CELLAR_ADDON_HOST}
+  access_key = ${CELLAR_ADDON_KEY_ID}
+  secret_key = ${CELLAR_ADDON_KEY_SECRET}
+  bucket_name = "resources"
 }
 
 authProvider {
-    url=${AUTH_PROVIDER_HOST}
+  url = ${AUTH_PROVIDER_HOST}
 }
 
 play.filters.hosts {
-    allowed = [".cleverapps.io", "localhost"]
+  allowed = [".cleverapps.io", "localhost"]
 }
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
-play.http.secret.key="changeme"
-play.http.secret.key=${?APPLICATION_SECRET}
+play.http.secret.key = "changeme"
+play.http.secret.key = ${?APPLICATION_SECRET}
