add missing host to whitelist

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,7 +23,7 @@ authProvider {
 }
 
 play.filters.hosts {
-  allowed = [".cleverapps.io", "localhost"]
+  allowed = [".cleverapps.io", "localhost", "127.0.0.1"]
 }
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
