--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,9 +5,13 @@ db {
     url = "jdbc:postgresql://"${POSTGRESQL_ADDON_HOST}":"${POSTGRESQL_ADDON_PORT}"/"${POSTGRESQL_ADDON_DB}
     username = ${POSTGRESQL_ADDON_USER}
     password = ${POSTGRESQL_ADDON_PASSWORD}
-    port = ${POSTGRESQL_ADDON_PORT}
-    database = ${POSTGRESQL_ADDON_DB}
     logSql = true
+
+    hikaricp {
+      maximumPoolSize=2
+      connectionTimeout=5 second
+      idleTimeout=10 minute
+    }
   }
 }
 
