add maxi http memory buffer size

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,3 +29,5 @@ play.filters.enabled += "play.filters.cors.CORSFilter"
 
 play.http.secret.key = "changeme"
 play.http.secret.key = ${?APPLICATION_SECRET}
+
+play.http.parser.maxMemoryBuffer= 50000K
